src/core/screen.c
@@ -808,8 +808,6 @@ meta_screen_free (MetaScreen *screen,
 
   screen->closing += 1;
 
-  meta_display_grab (display);
-
   meta_compositor_unmanage (screen->display->compositor);
 
   meta_display_unmanage_windows_for_screen (display, screen, timestamp);
@@ -866,9 +864,6 @@ meta_screen_free (MetaScreen *screen,
   g_free (screen->screen_name);
 
   g_object_unref (screen);
-
-  XFlush (display->xdisplay);
-  meta_display_ungrab (display);
 }
 
 void
